--- a/index.html
+++ b/index.html
@@ -70,29 +70,117 @@
       font-size: 1.1em;
     }
 
-    /* Services */
-    .services {
-      padding: 40px 20px;
-      background-color: #ecf0f1;
-      text-align: center;
-    }
+    <!-- Improved Services Section -->
+<section id="services" class="services-section">
+  <div class="container">
+    <h2 class="section-title">Our Audit & Assurance Services</h2>
+    <p class="section-subtitle">Professional, Reliable, and Transparent Solutions for Financial Success</p>
 
-    .services h2 {
-      font-size: 2em;
-      margin-bottom: 30px;
-    }
+    <div class="services-grid">
+      <div class="service-card">
+        <img src="images/financial-audit-icon.png" alt="Financial Audit">
+        <h3>Financial Audits</h3>
+        <p>Ensure your financial statements are accurate, compliant, and ready for stakeholders.</p>
+      </div>
+      <div class="service-card">
+        <img src="images/internal-audit-icon.png" alt="Internal Audit">
+        <h3>Internal Audits</h3>
+        <p>Evaluate risk management, control, and governance processes for operational excellence.</p>
+      </div>
+      <div class="service-card">
+        <img src="images/risk-icon.png" alt="Risk Assessment">
+        <h3>Risk Assessments</h3>
+        <p>Identify and mitigate financial, compliance, and operational risks proactively.</p>
+      </div>
+      <div class="service-card">
+        <img src="images/compliance-icon.png" alt="Regulatory Compliance">
+        <h3>Regulatory Compliance</h3>
+        <p>Stay ahead of changes in regulations and ensure full compliance with industry standards.</p>
+      </div>
+    </div>
 
-    .service-item {
-      margin-bottom: 30px;
-    }
+    <div class="cta-container">
+      <a href="#contact" class="cta-button">Get a Free Consultation</a>
+    </div>
+  </div>
+</section>
 
-    .service-item h3 {
-      font-size: 1.5em;
-      margin-bottom: 10px;
-    }
+<!-- Styles (Add to your CSS file or inside <style> tag) -->
+<style>
+  .services-section {
+    background: #f8f9fb;
+    padding: 60px 20px;
+    text-align: center;
+    font-family: 'Segoe UI', sans-serif;
+  }
 
-    .service-item p {
-      font-size: 1.1em;
+  .section-title {
+    font-size: 36px;
+    font-weight: bold;
+    color: #222;
+  }
+
+  .section-subtitle {
+    font-size: 18px;
+    color: #555;
+    margin-bottom: 40px;
+  }
+
+  .services-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 30px;
+    margin-bottom: 40px;
+  }
+
+  .service-card {
+    background: #fff;
+    padding: 30px 20px;
+    border-radius: 12px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.05);
+    transition: transform 0.3s ease;
+  }
+
+  .service-card:hover {
+    transform: translateY(-5px);
+  }
+
+  .service-card img {
+    width: 60px;
+    margin-bottom: 20px;
+  }
+
+  .service-card h3 {
+    font-size: 20px;
+    color: #004080;
+    margin-bottom: 10px;
+  }
+
+  .service-card p {
+    font-size: 15px;
+    color: #444;
+  }
+
+  .cta-container {
+    margin-top: 20px;
+  }
+
+  .cta-button {
+    display: inline-block;
+    padding: 12px 30px;
+    background: #004080;
+    color: white;
+    border-radius: 6px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background 0.3s;
+  }
+
+  .cta-button:hover {
+    background: #002f5f;
+  }
+</style>
+;
     }
 
     /* Contact */
