--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Audit Services - AMK Associates</title>
   <style>
-    /* Reset & Base Styles */
-    body {
-      font-family: Arial, sans-serif;
+    /* Base Reset & Fonts */
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
       background-color: #f4f4f4;
+      line-height: 1.6;
     }
 
     /* Header */
@@ -20,6 +25,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-wrap: wrap;
     }
 
     .logo img {
@@ -28,19 +34,39 @@
 
     .navbar ul {
       list-style: none;
-      padding: 0;
-      margin: 0;
       display: flex;
+      gap: 20px;
     }
 
-    .navbar ul li {
-      margin: 0 20px;
-    }
-
-    .navbar ul li a {
+    .navbar a {
       color: white;
       text-decoration: none;
       font-weight: bold;
+    }
+
+    /* Mobile Navbar */
+    .menu-toggle {
+      display: none;
+      font-size: 1.5em;
+      color: white;
+      cursor: pointer;
+    }
+
+    @media (max-width: 768px) {
+      .navbar ul {
+        flex-direction: column;
+        display: none;
+        width: 100%;
+        background-color: #34495e;
+      }
+
+      .navbar ul.show {
+        display: flex;
+      }
+
+      .menu-toggle {
+        display: block;
+      }
     }
 
     /* Hero Section */
@@ -62,17 +88,170 @@
     }
 
     .cta-button {
-      padding: 10px 20px;
+      padding: 12px 30px;
       background-color: #27ae60;
       color: white;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: 6px;
       font-size: 1.1em;
+      transition: background 0.3s;
     }
 
-    <!-- Improved Services Section -->
-<section id="services" class="services-section">
-  <div class="container">
+    .cta-button:hover {
+      background-color: #1e874b;
+    }
+
+    /* Services Section */
+    .services-section {
+      background: #f8f9fb;
+      padding: 60px 20px;
+      text-align: center;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    .section-title {
+      font-size: 36px;
+      font-weight: bold;
+      color: #222;
+    }
+
+    .section-subtitle {
+      font-size: 18px;
+      color: #555;
+      margin-bottom: 40px;
+    }
+
+    .services-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 30px;
+      margin-bottom: 40px;
+    }
+
+    .service-card {
+      background: #fff;
+      padding: 30px 20px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.05);
+      transition: transform 0.3s ease;
+    }
+
+    .service-card:hover {
+      transform: translateY(-5px);
+    }
+
+    .service-card img {
+      width: 60px;
+      margin-bottom: 20px;
+    }
+
+    .service-card h3 {
+      font-size: 20px;
+      color: #004080;
+      margin-bottom: 10px;
+    }
+
+    .service-card p {
+      font-size: 15px;
+      color: #444;
+    }
+
+    .cta-container {
+      margin-top: 20px;
+    }
+
+    .cta-button.services-cta {
+      background: #004080;
+    }
+
+    .cta-button.services-cta:hover {
+      background: #002f5f;
+    }
+
+    /* Contact Section */
+    .contact {
+      padding: 60px 20px;
+      text-align: center;
+      background-color: #ffffff;
+    }
+
+    .contact h2 {
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+
+    .contact p {
+      color: #555;
+      margin-bottom: 30px;
+    }
+
+    .contact form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .contact input,
+    .contact textarea {
+      padding: 10px;
+      margin: 10px 0;
+      width: 80%;
+      max-width: 500px;
+      font-size: 1em;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+
+    .submit-button {
+      padding: 12px 30px;
+      background-color: #2980b9;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1em;
+      transition: background 0.3s;
+    }
+
+    .submit-button:hover {
+      background-color: #1c5f8d;
+    }
+
+    /* Footer */
+    .footer {
+      background-color: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Header -->
+  <header class="header">
+    <div class="logo">
+      <img src="logo.png" alt="AMK Associates Logo" />
+    </div>
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+    <nav class="navbar">
+      <ul id="nav-list">
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>Professional Audit Services</h1>
+    <p>Ensuring your financial health with accurate and reliable auditing solutions.</p>
+    <a href="#contact" class="cta-button">Get in Touch</a>
+  </section>
+
+  <!-- Services Section -->
+  <section id="services" class="services-section">
     <h2 class="section-title">Our Audit & Assurance Services</h2>
     <p class="section-subtitle">Professional, Reliable, and Transparent Solutions for Financial Success</p>
 
@@ -100,180 +279,18 @@
     </div>
 
     <div class="cta-container">
-      <a href="#contact" class="cta-button">Get a Free Consultation</a>
-    </div>
-  </div>
-</section>
-
-<!-- Styles (Add to your CSS file or inside <style> tag) -->
-<style>
-  .services-section {
-    background: #f8f9fb;
-    padding: 60px 20px;
-    text-align: center;
-    font-family: 'Segoe UI', sans-serif;
-  }
-
-  .section-title {
-    font-size: 36px;
-    font-weight: bold;
-    color: #222;
-  }
-
-  .section-subtitle {
-    font-size: 18px;
-    color: #555;
-    margin-bottom: 40px;
-  }
-
-  .services-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
-    margin-bottom: 40px;
-  }
-
-  .service-card {
-    background: #fff;
-    padding: 30px 20px;
-    border-radius: 12px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.05);
-    transition: transform 0.3s ease;
-  }
-
-  .service-card:hover {
-    transform: translateY(-5px);
-  }
-
-  .service-card img {
-    width: 60px;
-    margin-bottom: 20px;
-  }
-
-  .service-card h3 {
-    font-size: 20px;
-    color: #004080;
-    margin-bottom: 10px;
-  }
-
-  .service-card p {
-    font-size: 15px;
-    color: #444;
-  }
-
-  .cta-container {
-    margin-top: 20px;
-  }
-
-  .cta-button {
-    display: inline-block;
-    padding: 12px 30px;
-    background: #004080;
-    color: white;
-    border-radius: 6px;
-    text-decoration: none;
-    font-weight: bold;
-    transition: background 0.3s;
-  }
-
-  .cta-button:hover {
-    background: #002f5f;
-  }
-</style>
-;
-    }
-
-    /* Contact */
-    .contact {
-      padding: 40px 20px;
-      text-align: center;
-    }
-
-    .contact h2 {
-      font-size: 2em;
-      margin-bottom: 20px;
-    }
-
-    .contact form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .contact form input,
-    .contact form textarea {
-      padding: 10px;
-      margin: 10px 0;
-      width: 80%;
-      max-width: 500px;
-      font-size: 1em;
-    }
-
-    .submit-button {
-      padding: 10px 20px;
-      background-color: #2980b9;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    /* Footer */
-    .footer {
-      background-color: #2c3e50;
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-  </style>
-</head>
-<body>
-  <!-- Header -->
-  <header class="header">
-    <div class="logo">
-      <img src="logo.png" alt="AMK Associates Logo" />
-    </div>
-    <nav class="navbar">
-      <ul>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- Hero -->
-  <section class="hero">
-    <h1>Professional Audit Services</h1>
-    <p>Ensuring your financial health with accurate and reliable auditing solutions.</p>
-    <a href="#contact" class="cta-button">Get in Touch</a>
-  </section>
-
-  <!-- Services -->
-  <section id="services" class="services">
-    <h2>Our Services</h2>
-    <div class="service-item">
-      <h3>Financial Audits</h3>
-      <p>Comprehensive audits to ensure the integrity of your financial statements.</p>
-    </div>
-    <div class="service-item">
-      <h3>Internal Audits</h3>
-      <p>Identify operational inefficiencies and compliance risks within your organization.</p>
-    </div>
-    <div class="service-item">
-      <h3>Risk Assessments</h3>
-      <p>Assess potential risks and develop strategies to mitigate them effectively.</p>
+      <a href="#contact" class="cta-button services-cta">Get a Free Consultation</a>
     </div>
   </section>
 
-  <!-- Contact -->
+  <!-- Contact Section -->
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
     <p>Reach out for personalized audit solutions tailored to your business needs.</p>
-    <form>
+    <form action="#" method="post">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" placeholder="Your Message" required></textarea>
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
       <button type="submit" class="submit-button">Submit</button>
     </form>
   </section>
@@ -282,5 +299,14 @@
   <footer class="footer">
     <p>&copy; 2025 AMK Associates. All Rights Reserved.</p>
   </footer>
+
+  <!-- JS for Navbar Toggle -->
+  <script>
+    function toggleMenu() {
+      const navList = document.getElementById('nav-list');
+      navList.classList.toggle('show');
+    }
+  </script>
+
 </body>
 </html>
